# django_cowsay

./: README.md  db.sqlite3  pyproject.toml
django_cowsay/: asgi.py  settings.py  urls.py  wsgi.py
homepage/: admin.py  forms.py  models.py  views.py
homepage/migrations/: 0001_initial.py  0002_auto_20200818_0022.py  0003_auto_20200818_0045.py  0004_auto_20200818_0046.py  0005_auto_20200818_0055.py  0006_auto_20200818_1352.py
templates/: history.html  index.html
